plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.14'
}

group 'com.star.easydoc'
version '1.25'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.1'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
//    plugins 'java'
    version '2018.1'
    pluginName 'Easy Javadoc'
    updateSinceUntilBuild false
}
patchPluginXml {
    changeNotes """
      This plugin can help you complete the Chinese javadoc document quickly.<br>
      Support three type of javadoc: field, method and class.<br>
      <h3>v1.25 fix</h3>
      <ul>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.24 fix</h3>
      <ul>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.23 update</h3>
      <ul>
          <li>add logo</li>
          <li>add listener</li>
      </ul>
      <h3>v1.22 update</h3>
      <ul>
          <li>keep generate all javadoc option</li>
      </ul>
      <h3>v1.21 update</h3>
      <ul>
          <li>method @return support code-mode and link-mode</li>
          <li>optimization hints</li>
      </ul>
      <h3>v1.20 update</h3>
      <ul>
          <li>fix custom param bug</li>
      </ul>
      <h3>v1.19 update</h3>
      <ul>
          <li>fix @return bug</li>
      </ul>
      <h3>v1.18 update</h3>
      <ul>
          <li>support full custom translate</li>
      </ul>
      <h3>v1.17 update</h3>
      <ul>
          <li>support custom template</li>
      </ul>
      <h3>v1.16 update</h3>
      <ul>
          <li>@throws tag bug fix</li>
      </ul>
      <h3>v1.15 update</h3>
      <ul>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.13 update</h3>
      <ul>
          <li>support baidu translator and tencent translator</li>
          <li>add cache for translator</li>
      </ul>
      <h3>v1.12 update</h3>
      <ul>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.11 update</h3>
      <ul>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.10 update</h3>
      <ul>
          <li>support auto translate</li>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.9 update</h3>
      <ul>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.8 update</h3>
      <ul>
          <li>support import and export</li>
          <li>support more IDEA versions</li>
      </ul>
      <h3>v1.7 update</h3>
      <ul>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.6 update</h3>
      <ul>
          <li>support custom template</li>
          <li>support translate Chinese to English</li>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.5 update</h3>
      <ul>
          <li>support more idea versions</li>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.4 update</h3>
      <ul>
          <li>support for incremental updates</li>
          <li>support whole sentences translation</li>
          <li>add @throws label for the method javadoc</li>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.3 update</h3>
      <ul>
          <li>support bulk insert javadoc</li>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.1 update</h3>
      <ul>
          <li>add @link label in @return doc of the method javadoc</li>
          <li>fix some bugs</li>
      </ul>
      <h3>v1.0 first version</h3>
      <ul>
          <li>support class, method and field javadoc</li>
      </ul>
      <a href="https://github.com/starcwang/easy_javadoc">easy_javadoc source code and document</a><br>
      """
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
